--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
     "extension:zip": "pnpm --filter chrome-extension zip",
     "extension:watch": "pnpm --filter chrome-extension watch",
     "extension:e2e": "pnpm --filter chrome-extension-e2e e2e",
-    "extension:release": "pnpm --filter chrome-extension release",
     "extension:publish": "pnpm --filter chrome-extension publish-to-store",
     "website:build": "pnpm --filter website build",
     "website:start": "pnpm --filter website start",
-    "website:release": "pnpm --filter website release",
     "build": "pnpm website:build && pnpm extension:build",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
     "lint:fix": "pnpm lint --fix",
     "test": "echo \"No unit tests \"",
-    "test:dts": "echo \"No dts tests \"",
-    "release": "pnpm website:release && pnpm extension:release"
+    "test:dts": "echo \"No dts tests \""
   },
   "author": "",
   "license": "MIT",
@@ -49,8 +46,6 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "playwright": "latest",
-    "semantic-release": "19.0.3",
-    "semantic-release-monorepo": "7.0.5",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.3",
