--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -2,16 +2,14 @@ name: Deploy website
 
 on:
   workflow_dispatch:
-  release:
-    types:
-      - published
+  push:
+    branches:
+      - main
 
 jobs:
   deploy-website:
     environment: 'production'
     runs-on: ubuntu-latest
-    # Ensure that for release event we trigger this workflow only for the correct tag
-    if: ${{ github.event_name != 'release' || contains(github.ref, 'website-v') }}
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4
