--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -5,36 +5,11 @@
   "description": "",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
-    "release": "semantic-release",
-    "release-dry": "semantic-release --dry-run"
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fingerprintjs/fingerprintjs-pro": "^3.8.1"
-  },
-  "release": {
-    "extends": "semantic-release-monorepo",
-    "tagFormat": "website-v${version}",
-    "branches": [
-      "main"
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "CHANGELOG.md",
-            "package.json"
-          ]
-        }
-      ],
-      "@semantic-release/github"
-    ]
   }
 }
