--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,10 +3,10 @@ on:
   push:
     branches-ignore:
       - main
-  schedule:
-    - cron: '0 0 * * *'
 
-# TODO Env (WEBSITE_URL) is not passed correctly to the job
+env:
+  WEBSITE_URL: ${{ secrets.WEBSITE_URL }}
+
 jobs:
   build-and-check:
     name: Build project and run CI checks
@@ -15,80 +15,4 @@ jobs:
     with:
       # Output WEBSITE_URL to .env file
       runAfterInstall: |
-        echo "WEBSITE_URL=${{ secrets.WEBSITE_URL }}" >> .env
-  chrome-extension-e2e:
-    name: Chrome extension e2e tests
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@129abb77bf5884e578fcaf1f37628e41622cc371
-        with:
-          version: 8
-
-      - name: Install dependencies
-        run: pnpm install && pnpm list
-
-      - name: Install latest playwright
-        run: pnpm add playwright -w --lockfile-only
-
-      - name: Setup playwright
-        run: pnpm exec playwright install
-
-      - name: Print playwright version
-        run: pnpm exec playwright --version
-
-      - name: Create .env file
-        run: |
-          echo "API_KEY=${{ secrets.API_KEY }}" >> .env
-          echo "WEBSITE_URL=https://localhost:8080/" >> .env
-
-      - name: Build extension
-        run: pnpm extension:build
-
-      - name: Run tests
-        uses: GabrielBB/xvfb-action@86d97bde4a65fe9b290c0b3fb92c2c4ed0e5302d
-        with:
-          run: pnpm extension:e2e
-
-      - name: Upload trace
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Trace (OS ${{ matrix.os }})
-          path: packages/chrome-extension-e2e/test-results
-
-      - name: Upload Unit Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Unit Test Results (OS ${{ matrix.os }})
-          path: packages/chrome-extension-e2e/reports/report.xml
-
-  publish-test-results:
-    name: Publish test results
-    needs: chrome-extension-e2e
-    runs-on: ubuntu-latest
-    permissions:
-      checks: write
-      pull-requests: write
-      contents: read
-      issues: read
-    if: always()
-    steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-
-      - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@30eadd5010312f995f0d3b3cff7fe2984f69409e
-        with:
-          files: 'artifacts/**/*.xml'
-          check_name: 'Chrome Extension E2E Test Results'
+        echo "WEBSITE_URL=${WEBSITE_URL}" >> .env
