--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,5 +13,8 @@ jobs:
     uses: fingerprintjs/dx-team-toolkit/.github/workflows/release-typescript-project.yml@v1
     with:
       appId: ${{ vars.APP_ID }}
+      # Output WEBSITE_URL to .env file
+      runAfterInstall: |
+        echo "WEBSITE_URL=${WEBSITE_URL}" >> .env
     secrets:
       APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
